# vr-status

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  vr-status.exe.manifest  vr-status.exe.manifest.rc  vr-status.vrmanifest  vr-status.yaml
bindings/: Cargo.toml  build.rs  openvr.h
bindings/src/: lib.rs
src/: main.rs  mqtt.rs  openvr.rs  settings.rs
