[package]
name = "vr-status"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bindings = { path = "bindings" }
cstr = "0.2.8"
env_logger = "0.8.4"
libloading = "0.7.0"
log = "0.4.14"
rumqttc = "0.8.0"
rustls-native-certs = "0.5.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = { version = "1.8.1", features = ["fs", "io-util", "macros", "rt", "sync"] }

[build-dependencies]
embed-resource = "1.6.3"
