[package]
name = "bindings"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.17.2"

[build-dependencies]
bindgen = "0.58.1"
windows = "0.17.2"
